--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=root1234
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
